# olatu

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  index.html  pixi.toml  pyproject.toml
.github/workflows/: deploy.yml  refresh-data.yml  scrap.yml
assets/: index-CaPX4X1r.css
data/: daily.parquet  hourly.parquet  manifest.json  new_data.parquet  recent.json  wave_buoys_data.parquet  wave_buoys_data_25_years.parquet  wave_buoys_data_2_years.parquet  wave_buoys_data_prod.parquet
data/year/: 06403_2013.parquet  06403_2015.parquet  06403_2016.parquet  06403_2017.parquet  06403_2019.parquet  06403_2024.parquet  06403_2026.parquet
ingest/: __init__.py  build.py  schema.py  scrape.py  update.py
notebooks/: generate.ipynb  scrap.ipynb
specs/: 2026-06-27-0001-foundation.md  2026-06-27-0002-data-dictionary.md  2026-06-27-0003-ux-refinement.md  2026-06-27-0004-realtime-scraper.md  2026-06-27-0005-multi-buoy.md  2026-06-28-0006-stack-migration-a11y.md  LEARNINGS.md  README.md
src/wave_buoys_viewer/: __init__.py  cli.py  scrap.py
webapp/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
webapp/messages/: en.json  es.json  fr.json
webapp/project.inlang/: settings.json
webapp/public/: CNAME
webapp/public/data/: daily.parquet  hourly.parquet  latest.json  manifest.json  recent.json
webapp/public/data/year/: 06403_2014.parquet  06403_2018.parquet  06403_2020.parquet  06403_2021.parquet  06403_2022.parquet  06403_2023.parquet  06403_2025.parquet  06403_2026.parquet
webapp/src/: App.jsx  App.tsx  main.jsx  main.tsx  styles.css  vite-env.d.ts
webapp/src/components/: BuoyLocator.tsx  CurrentConditions.tsx  DataLoader.jsx  DatePicker.tsx  ExpandedMap.tsx  Footer.tsx  Glossary.tsx  Header.tsx  HeatRibbon.tsx  InfoPopover.tsx  MiniMap.tsx  Skeletons.tsx  Sparkline.tsx  StationBar.tsx  TimeSeries.tsx  WavePlot.jsx  icons.tsx
webapp/src/components/ui/: button.tsx  dialog.tsx  popover.tsx  sheet.tsx  toggle-group.tsx  tooltip.tsx
webapp/src/lib/: buoys.ts  data.ts  format.ts  i18n.tsx  parquet.ts  theme.tsx  uplotTouch.ts  useNow.ts  utils.ts
webapp/src/utils/: dataParser.js  downsample.js
