[project]
name = "wave-buoys-viewer"
description = "Wave Buoys Viewer: A webapp for visualizing and analyzing wave buoy data."
authors = [{ name = "Hadrien Mary", email = "hadrien.mary@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.13"
dynamic = ["version", "readme"]
dependencies = [] # replaced by pixi deps

[project.scripts]
wave-buoys-viewer = "wave_buoys_viewer.cli:app"

# Build system - setuptools

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=9.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src/"]
include = ["wave_buoys_viewer*"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools_scm]

# Pixi configuration

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.package]
version = "0.0.0.dev" # remove once pixi supports dynamic version

[tool.pixi.tasks]
test = "pytest -vvv --durations=0 tests/"
format = "ruff format --exclude='*.ipynb'"
lint = "ruff check --fix --exclude='*.ipynb'"
lint-format = { depends-on = ["format", "lint"] }

# Pixi dependencies and features

[tool.pixi.dependencies]
python = ">=3.13.0,<4"
# App/lib library
wave-buoys-viewer = { path = "." }
# Dev tools
ruff = ">=0.14"
jupyterlab = ">=4.4.3"
pre-commit = ">=4.3.0"
# Production dependencies
## IO
s3fs = ">=2025.9"
fsspec = ">=2025.9"
universal_pathlib = ">=0.3.4"
## Scientific
numpy = ">=2.3.3"
pandas = ">=2.3.3"
## Plotting
matplotlib = ">=3.10.0"
seaborn = ">=0.13.2"
## Utilities
tqdm = ">=4.67.1"
ipywidgets = ">=8.1.5"
httpx = ">=0.28.1"
typer = ">=0.19.2"
lxml = ">=6.0.2"
pyarrow = ">=21.0.0,<22"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"

[tool.pixi.package.host-dependencies]
python = ">=3.13.0,<4"
pip = "*"
setuptools = ">=80"
setuptools-scm = ">=9.2"

[tool.pixi.package.run-dependencies]
python = ">=3.13.0,<4"

# See https://github.com/prefix-dev/pixi/issues/2714
[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.target.linux-64.dependencies]
cuda-version = "*"
cuda-compiler = "*"

# Ruff
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
lint.extend-select = ["I"] # sort imports
lint.extend-per-file-ignores = { "*.ipynb" = [
    "E402",
    "F401",
    "I001",
] } # update per-file ignores

# Pixi dependency updates
[tool.pixi-diff-to-markdown]
merge-dependencies = "no"
max-expanded-rows = 10
change-type-column = true
explicit-column = false
package-type-column = false
create-links-for-packages = true
